# thumper-img

./: CMakeLists.txt  DottedBorder.qml  Lightbox.qml  Settings.qml  Tag.qml  TagList.qml  TagSelection.qml  fileutils.cpp  fileutils.h  imagedao.cpp  imagedao.h  imagemetadata.cpp  imagemetadata.h  imageprocessor.cpp  imageprocessor.h  imageref.cpp  imageref.h  main.cpp  main.qml  qml.qrc  simpleset.h  sqlitehelper.cpp  sqlitehelper.h  taglist.cpp  taglist.h  thumper-img.pro  thumper.cpp  thumper.h  thumper.rc  thumperimageprovider.cpp  thumperimageprovider.h
dct/: fast-dct-lee.c
